@@ -42,6 +42,10 @@ extern RTPDynamicProtocolHandler ff_mpeg4_generic_dynamic_handler;
 extern RTPDynamicProtocolHandler ff_ms_rtp_asf_pfa_handler;
 extern RTPDynamicProtocolHandler ff_ms_rtp_asf_pfv_handler;
 extern RTPDynamicProtocolHandler ff_qdm2_dynamic_handler;
+extern RTPDynamicProtocolHandler ff_qt_rtp_aud_handler;
+extern RTPDynamicProtocolHandler ff_qt_rtp_vid_handler;
+extern RTPDynamicProtocolHandler ff_quicktime_rtp_aud_handler;
+extern RTPDynamicProtocolHandler ff_quicktime_rtp_vid_handler;
 extern RTPDynamicProtocolHandler ff_svq3_dynamic_handler;
 extern RTPDynamicProtocolHandler ff_theora_dynamic_handler;
 extern RTPDynamicProtocolHandler ff_vorbis_dynamic_handler;
